--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
 
     <div layout="row">
     <span class="halfDiv">
+<p layout="row" layout-align="center center">danish</p>
+    </span>
+
+    <span class="halfDiv1"  >
+
 
     </span>
 
-    <span class="halfDiv1">
-
-    </span>
     </div>
     <span class="round" layout="row" layout-align="center center" ng-click=""><ng-md-icon icon="add" size="40"  class="fillColor"></ng-md-icon></span>
 
@@ -79,6 +81,7 @@
         </md-content>
     </md-sidenav>
 </section>
+
 <!--<header></header>-->
 
 
