--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div layout="row" layout-align="start center" layout-margin>
 
             <div>
-                <img src="../10004010_616141291784942_1325521122_n.jpg" class="imgRadius img1" ng-click="showAdvanced($event)">
+                <img src="10004010_616141291784942_1325521122_n.jpg" class="imgRadius img1" ng-click="showAdvanced($event)">
             </div>
             <div class="fontEffects" layout="column">
                 <div>Jennifer Wilson</div>
@@ -60,7 +60,7 @@
 <div layout-margin layout-padding>
     <span class="Today" layout-margin layout-padding><b layout-margin layout-padding>Today</b></span>
     <ul>
-        <img src="../fulllist.jpg" class="float">
+        <img src="fulllist.jpg" class="float">
         <li class="mariginPadding1">Finish Landing page concept</li>
         <li class="mariginPadding">Design app illustration</li>
         <li class="mariginPadding">Javascript training</li>
@@ -76,7 +76,7 @@
     <md-sidenav class="md-sidenav-left md-whiteframe-z2 widthHeight" md-component-id="right">
         <header class="headear2" layout="row">
             <span layout="row" layout-align="start center" layout-margin> <img
-                    src="../10004010_616141291784942_1325521122_n.jpg" class="imgRadius img1" ng-click="showAdvanced($event)"></span>
+                    src="10004010_616141291784942_1325521122_n.jpg" class="imgRadius img1" ng-click="showAdvanced($event)"></span>
             <span class="fontEffects" flex layout="row" layout-align="start center">Jennifer Wilson</span>
 
         </header>
